# build_system

./: README.md
project/: CMakeLists.txt
project/src/: main.c
sAPI/: CMakeLists.txt  main.c
sAPI/doxygen/: README  doxygen.cfg
sAPI/examples/: CMakeLists.txt  readelf.c  timer.c
sAPI/export/: sprint.h  sreadelf.h  stimer.h
sAPI/src/: sprint.c  sreadelf.c  stimer.c  toolbox.c
